Fix export button alignment

--- a/index.css
+++ b/index.css
@@ -140,8 +140,13 @@ gap: 1rem;
     align-items: center;
 }
 .download{
-padding: 1rem;
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    position: absolute;
+    right: 1%;
 }
+
 .btn{
     outline: none;
     border: none;
